# paperless-to-paperless-ngx

./: LICENSE  README.md  export.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
paperless_to_paperless_ngx/: cli.py
